# prog_kurs

./: CMakeLists.txt  resource.h  simple_dialog.rc
include/: graph_renderer.hpp  opcua_client.hpp
src/: DynamicTagManager.cpp  DynamicTagManager.h  graph_renderer.cpp  graph_window.cpp  main.cpp  main.cpp.backup  opcua_client.cpp  simple_opcua_gui.cpp  win32_gui.cpp.backup  write_dialog.cpp
